--- a/docs/lab_05.Rmd
+++ b/docs/lab_05.Rmd
@@ -1,3 +1,13 @@
+---
+title: "Geography 176A"
+author: "[Bryn McGowan](https://brynmcgowan22.github.io)"
+subtitle: 'Lab 05: Rasters & Remote Sensing'
+output:
+  html_document:
+    theme: journal
+---
+
+```{r, message=FALSE, warning=FALSE}
 library(raster)
 library(tidyverse)
 library(getlandsat)
@@ -5,7 +15,11 @@ library(sf)
 library(mapview)
 library(osmdata)
 library(stats)
+```
 
+### Question 1
+
+```{r, message=FALSE, warning=FALSE}
 uscities = read_csv("data/uscities.csv")
 
 bb = uscities %>%
@@ -19,18 +33,11 @@ bb = uscities %>%
 
 mapview(bb)
 
-# scenes = lsat_scenes()
+```
 
-bbwgs = bb %>% st_transform(4326)
-bb = st_bbox(bbwgs)
+### Question 2
 
-down = scenes %>%
-  filter(min_lat <= bb$ymin, max_lat >= bb$ymax,
-         min_lon <= bb$xmin, max_lon >= bb$xmax,
-         as.Date(acquisitionDate) == as.Date("2016-09-26"))
-
-write.csv(down, file = "data/palo-flood-scene.csv", row.names = FALSE)
-
+```{r, message=FALSE, warning=FALSE}
 meta = read_csv("data/palo-flood-scene.csv")
 
 files = lsat_scene_files(meta$download_url) %>%
@@ -46,13 +53,24 @@ s = stack(st) %>%
 cropper = bbwgs %>% st_transform(crs(s))
 
 r = crop(s, cropper)
+```
+dimensions : 340, 346, 117640, 6  (nrow, ncol, ncell, nlayers)
+crs        : +proj=utm +zone=15 +datum=WGS84 +units=m +no_defs
+resolution : 30, 30  (x, y)
 
+### Question 3
+```{r, message=FALSE, warning=FALSE}
 par(mfrow = c(2, 2))
 plotRGB(r, r = 4, g = 3, b = 2, stretch = "lin")
 plotRGB(r, r = 5, g = 4, b = 3, stretch = "lin")
 plotRGB(r, r = 5, g = 6, b = 4, stretch = "hist")
 plotRGB(r, r = 6, g = 3, b = 2, stretch = "lin")
+```
+The color stretch adds contrast to the plot to make the colors more enhanced.
 
+### Question 4
+#### Step 1
+```{r, message=FALSE, warning=FALSE}
 ndvi = (r$band5 - r$band4) / (r$band5 + r$band4)
 ndwi = (r$band3 - r$band5) / (r$band3 + r$band5)
 mndwi = (r$band3 - r$band6) / (r$band3 + r$band6)
@@ -68,8 +86,10 @@ stack = stack(ndvi, ndwi, nmdwi, wri, swi) %>%
 
 palette = colorRampPalette(c("blue", "white", "red"))
 plot(stack, col = palette(256))
+```
 
-
+#### Step 2
+```{r, message=FALSE, warning=FALSE}
 thresholding_ndvi = function(x){ifelse(x <= 0, 1, 0)}
 thresholding_ndwi = function(x){ifelse(x >= 0, 1, 0)}
 thresholding_mndwi = function(x){ifelse(x >= 0, 1, 0)}
@@ -90,14 +110,21 @@ flood_stack = stack(flood_ndvi, flood_ndwi, flood_mndwi, flood_wri, flood_swi) %
              "SWI"))
 
 plot(flood_stack, col = c("white", "blue"))
+```
 
-
-
+### Question 5
+#### Step 1
+```{r, message=FALSE, warning=FALSE}
 set.seed(1)
+```
 
+#### Step 2
+```{r, message=FALSE, warning=FALSE}
 values = getValues(r)
 dim(values)
 # 117640    6
+
+# There are 117,640 rows and 6 columns, meaning there is one column for each band of the raster stack
 
 values = na.omit(values)
 
@@ -115,7 +142,10 @@ values(kmeans_raster6) = k6$cluster
 plot(kmeans_raster6)
 values(kmeans_raster3) = k3$cluster
 plot(kmeans_raster3)
+```
 
+#### Step 3
+```{r, message=FALSE, warning=FALSE}
 t = table(getValues(flood_swi), getValues(kmeans_raster12))
 
 index = which.max(t[2,])
@@ -127,7 +157,7 @@ flood_index = calc(kmeans_raster12, thresholding_index)
 
 plot(flood_index)
 
-flood_stack = flood_stack %>% addLayer(flood_index) %>%
+flood_stack = flood_stack %>% addLayer(flood_index) %>% 
   setNames(c("NDVI",
              "NDWI",
              "MNDWI",
@@ -136,5 +166,19 @@ flood_stack = flood_stack %>% addLayer(flood_index) %>%
              "Index"))
 plot(flood_stack, col = c("white", "blue"))
 
+```
 
+### Question 6
+```{r, message=FALSE, warning=FALSE}
+rsum_plot = sum(flood_stack)
 
+stats = cellStats(flood_stack, sum)
+stats = (stats*900)/1000
+knitr::kable(stats, caption = c("Area of Cells"), col.names = "Area")
+
+plot(rsum_plot, col = blues9)
+
+uncertainty = calc(flood_stack, fun = sum)
+plot(uncertainty, col = blues9)
+```
+Some of the cell values aren't even because the data is averages, meaning there is overlap in some of the cells.
